# claude-swap-tray

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: account.rs  app.rs  cli.rs  config.rs  login.rs  main.rs  monitor.rs  notify.rs  oauth.rs  store.rs  switcher.rs  tray.rs  usage.rs
src/platform/: mod.rs  windows.rs  wsl.rs
src/screens/: accounts.rs  add_account.rs  mod.rs  settings.rs
